removed created_at for now

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,7 @@
     <li id={{post.id}}>
         <div>
             <h3>{{post.heading}}</h3>
-            <p>Posted by {{post.user.username}} on {{post.created_at}}</p>
+            <p>Posted by {{post.user.username}}</p>
         </div>
         <p>{{post.content}}</p>
     </li>
