--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
           </div>
     </nav>
 
-    <main class="container">
+    <main class="container py-5">
         {{{ body }}}
     </main>
     {{#if loggedIn}}
