format dashboard bug

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -11,7 +11,7 @@
 </div>
 
 {{#if post.comments}}
-<div>
+<div class="mb-4">
     {{#each post.comments as |comment|}}
     <div class="card">
         <div class="comment card-body">
