--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
-<h2 class="text center mb-3">Post History</h2>
+<h2 class="mb-3">Post History</h2>
 {{#if posts.length}}
-<div>
+<div class="my-3">
     {{#each posts as |post|}}
     <div class="card">
         <div class="card-header">
