handlebars edited for formatting

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -13,7 +13,7 @@
 {{#if post.comments}}
 <div class="mb-4">
     {{#each post.comments as |comment|}}
-    <div class="card">
+    <div class="card my-2">
         <div class="comment card-body">
             <div class="text">
                 <p> {{comment.text}}</p>
